package slaughterhouse.domain;

import java.time.LocalDateTime;
import java.util.UUID;

public class Delivery
{
  private UUID deliveryId;
  private LocalDateTime arrivedAt;
  private String transportReg;
}
