package slaughterhouse.domain;

import java.util.UUID;

public class Part
{
  private UUID partId;
  private double weightKg;
}
