package slaughterhouse.domain;

public class ProductComponent
{
  private int quantity;
}
